# aoc-2022

./: .gitignore  Cargo.toml  d8_notes.txt  notizen.ods
input/2022/: test_day14_1.txt  test_day9_2.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day4_simd_p1.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
