[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

bytemuck = "1"
itertools = "0.10"
rayon = "1"
regex = "1"
parse-display = "0.6"
memchr = "2"
#core_simd = { git = "https://github.com/rust-lang/portable-simd" }
arrayvec = "0.7"
rustc-hash = "1"
bitvec = "1"
atoi_radix10 = "0.0.1"